# my-django-drf-github-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: lint-migrations.yaml  linting_formating.yaml  testing.yaml
custom_auth/: apps.py  test_views.py  urls.py  views.py
project/project/: settings.py
template/: asgi.py  settings.py  urls.py
users/: serializers.py
users/migrations/: 0001_initial.py
