[tool.poetry]
name = "my-django-drf-github-template"
version = "0.2.0"
description = "A highly optioned Django + DRF Github template (always evolving)"
authors = ["matheuscas <matheus.mcas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"
environs = "^10.3.0"
dj-database-url = "^2.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
isort = "^5.13.2"
black = "^23.12.1"
mypy = "^1.8.0"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
commitizen = "^3.13.0"
coverage = "^7.4.1"
pytest-cov = "^4.1.0"
mixer = "^7.2.2"
django-migration-linter = "^5.0.0"
django-cors-headers = "^4.3.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = ["pyproject.toml:version"]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true

[tool.ruff]
line-length = 89

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 89

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
